--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-     <h1>Hi</h1>
+     <div class="main">
+        <div class="left">
+            <h1>Hi</h1>
+        </div>
+        <div class="right"></div>
+            <h1>Hello</h1>
+        </div>
+     </div>
 </body>
 </html>
