Working with the left part (initially)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div class="left">
             <h1>Hi</h1>
         </div>
-        <div class="right"></div>
-            <h1>Hello</h1>
+        <div class="right">
+            <div class="first">Hi</div>
+            <div class="second">Hello</div>
+            <div class="third">World</div>
         </div>
      </div>
 </body>
