--- a/index.html
+++ b/index.html
@@ -10,12 +10,68 @@
 <body>
      <div class="main">
         <div class="left">
-            <h1>Hi</h1>
+            <div class="forImage">
+                <div class="semi-transparent">
+                    <img src="./images/odin-lined.png" alt="Odin-logo" height="100px">
+                    <h1>ODIN</h1>
+                </div>
+            </div>
+            <div class="forFooter">
+                <p class="p-footer">Photo by <a class="a-footer" href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a class="a-footer" href="unsplash.com">Unsplash</a></p>
+            </div>
         </div>
         <div class="right">
-            <div class="first">Hi</div>
-            <div class="second">Hello</div>
-            <div class="third">World</div>
+            <div class="first">
+                <h3>
+                    This is not a real online service! You know you need something <br/>
+                    like this in your life to help you realize your deepest dreams. <br/>
+                    Sign up <em>now</em> to get started.<br>
+                    <br><br>
+                    You <em>know</em> you want to.                    
+                </h3>
+            </div>
+            <form action="" method="get">
+                <div class="second">
+                    <h3>Let's do this!</h3>
+                    <div class="form-main-div">
+                        <div class="form-divs">
+                            <div class="form-div">
+                                <label for="firstName">FIRST NAME</label>
+                                <input type="text" id="firstName" name="first_name">
+                            </div>
+                            <div class="form-div">
+                                <label for="email">EMAIL</label>
+                                <input type="email" id="email" name="email">
+                            </div>
+                            <div class="form-div">
+                                <label for="password">PASSWORD</label>
+                                <input type="password" id="password" name="password" required>
+                                <p id="error"></p>
+                            </div>
+                        </div>
+                        <div class="form-divs">
+                            <div class="form-div">
+                                <label for="lastName">LAST NAME</label>
+                                <input type="text" id="lastName" name="last_name">
+                            </div>
+                            <div class="form-div">
+                                <label for="phoneNumber">PHONE NUMBER</label>
+                                <input type="tel" id="phoneNumber" name="phoneNumber">
+                            </div>
+                            <div class="form-div">
+                                <label for="confirmPassword">CONFIRM PASSWORD</label>
+                                <input type="password" id="confirmPassword" name="confirmPassword" required>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="third">
+                    <button type="submit" class="btn-green">Create Account</button>
+                </div>
+            </form>
+            <div class="hyperlink">
+                <p>Already have an account? <a href="#" class="login">Log in</a></p>
+            </div>
         </div>
      </div>
 </body>
