--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </form>
             <div class="hyperlink">
-                <p>Already have an account? <a href="#" class="login">Log in</a></p>
+                <p>Already have an account? <a href=" unsplash.com" class="login">Log in</a></p>
             </div>
         </div>
      </div>
